<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screen.HomeDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_view_detail"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:paddingBottom="10dp"
                android:scaleType="centerInside"
                android:contentDescription="@string/ITC"
                app:srcCompat="@drawable/itc_logo" />

            <TextView
                android:id="@+id/txt_home_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/university_tittle"
                android:text=""
                android:textAlignment="center"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="191dp" />

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:lineSpacingExtra="10sp"
            android:layout_marginTop="16dp"
            android:textSize="12sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:gravity="center">
                <TextView
                    android:id="@+id/txt_year_experience"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/circle_shape"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="#ffff"
                    android:hint="@string/txt_year"
                    android:textStyle="bold"
                    android:textColorHint="#ffff" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/yearexperience" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="50dp"
                android:gravity="center">
                <TextView
                    android:id="@+id/txt_award"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/circle_shape"
                    android:gravity="center"
                    android:hint="txt_award"
                    android:textAlignment="center"
                    android:textColor="#ffff"
                    android:textStyle="bold"
                    android:textColorHint="#ffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_below="@+id/txt_year_experience"
                    android:layout_marginTop="16dp"
                    android:text="@string/awardshonors" />
            </LinearLayout>


        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faculty"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="16dp"
            android:divider="@color/teal_200"
            android:fitsSystemWindows="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/contact_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="16sp"
            android:text="@string/contact"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="50dp"
            android:textSize="12sp"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>